@@ -1,5 +1,9 @@
 2013-10-21  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* PlaneSensor.wrl: 
+
+2013-10-21  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* TransformHandle.wrl: 
 
 2013-10-21  Holger Seelig  <holger.seelig@yahoo.de>
